# pve-vnc-proxy

./: .env.example  .gitignore  Cargo.toml  diesel.toml  readme.md
.github/: dependabot.yml
.github/workflows/: 0_dependabot-approve-and-merge.yaml  build.yml  codeql.yml
migrations/2025-09-13-023519-0000_initial/: up.sql
src/: main.rs
