[package]
name = "PveVncProxy"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1"
actix-web = "4"
actix-ws = "0.3"
jsonwebtoken = "10"
reqwest = "0.13"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = [
    "rustls-tls-webpki-roots",
] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
futures-util = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
supabase-jwt = "0.1.1"
diesel = { version = "2", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
tungstenite = "0.28.0"
url = "2.5.8"
bytes = "1.11.1"
env_logger = "0.11.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-actix-web = "0.7"
rand = "0.9.2"
base64 = "0.22.1"
percent-encoding = "2.3.2"
